# cross-tokenizer-distill

./: .gitignore  CALIBER_LEARNINGS.md  LICENSE  README.md  pyproject.toml
.caliber/learning/: current-session.jsonl  state.json
adapters/: transformers.py
baselines/dscv2lite/: BASE_FA2_CHAT_v2_HE_MBPP.json  M115_DSCV2LITE_M37c_HE_MBPP.json  README.md
cli/: inspect.py
ctd/: __init__.py  alignment.py  losses.py  mapper.py  on_policy_loss.py  precompute.py  util.py
ctd/teachers/: __init__.py  base.py  ollama.py  openai_compat.py
docs/: DESIGN.md  INTEGRATION.md  PHASE3_DESIGN.md  PLAN_DSCV2LITE_M37C.md  RESULTS.md  SMOKE_PROCEDURE.md  STYLE_SHIFT_ISSUE.md  TEACHER_REFERENCE.md  TEACHER_TOKEN_MASKING.md  V2_CTD_PLAN.md  VALIDATION.md  VALIDITY_GATE_DESIGN.md
experiments/validation/: 01_inspect.sh  02_prepare_corpus.py  03_precompute_B.py  04_precompute_C.py  05_train.py  06_eval.py  06_eval_batched.py  06_train_grpo_kl_distill.py  06_train_grpo_kl_verified.py  06_train_onpolicy.py  06_train_onpolicy_xv.py  06_train_onpolicy_xv_clip.py  06_train_onpolicy_xv_v2.py  06_train_sft_on_teacher.py  07_compare.py  README.md  eval_only.sh  eval_teacher_chat.py  filter_corpus_strict.py  gen_teacher_completions.py  overnight_orchestrator.sh  phase7_base_he.sh  phase8_topN_full.sh  phase9_winner_r04.sh  precompute_remote.py  run_all.sh  smoke_he20.py  smoke_he20_base.py  sweep_recipes.sh  sweep_recipes_v2.sh  sweep_sft.sh
tests/: test_alignment.py  test_losses.py  test_mapper.py  test_precompute.py  test_real_tokenizers.py  test_smoke.py  test_teachers_unit.py
(+1 files in other folders)
